# hermes

./: .gitattributes  .gitignore  Makefile  build.bat  build.py  build_android.py  build_android.sh  build_common.py  build_linux.py  build_linux.sh  hello  hermes.code-workspace  license.txt  readme.md  readme.txt  sample.cpp
.github/workflows/: build.yml
depend/aes/: .gitignore  Makefile  build.py  build_android.py  build_android.sh  build_ios.sh  build_linux.py  build_linux.sh  build_macos.sh  readme.txt  version.txt
depend/aes/include/: aesopt.h
depend/boringssl/: build.py  readme.txt
depend/curl/: .gitignore  Makefile.in  build.py  build_android.py  build_android.sh  build_ios.sh  build_linux.py  build_linux.sh  build_macos.sh  curlbuild_shared.h.in  readme.txt
depend/jsoncpp/: .gitignore  Makefile  Makefile.in  build.py  build_android.py  build_android.sh  build_ios.sh  build_linux.py  build_linux.sh  build_macos.sh  readme.txt  version.txt
depend/jsoncpp/jsoncpp.xcodeproj/: project.pbxproj
depend/libressl/: .gitignore  build.py
depend/openssl/: .gitignore  build_android.sh  opensslconf.h.in  opensslconf_shared.h.in  readme.txt
depend/openssl/include/: opensslconf.h.in
depend/zlib/: .gitignore  Makefile  build.py  build_ios.sh  build_macos.sh  readme.txt  version.txt
example/: .gitignore
example/01.HelloWorld/: HelloWorld.cpp  HelloWorld.hpp  Main.cpp  Makefile
example/01.HelloWorld_Android/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
example/01.HelloWorld_Android/app/: CMakeLists.txt  build.gradle
example/01.HelloWorld_Android/app/src/main/cpp/: main.cpp
example/01.HelloWorld_Android/app/src/main/java/pl/grupapracuj/hermes/helloworld/: MainActivity.java
example/01.HelloWorld_Android/gradle/wrapper/: gradle-wrapper.properties
example/01.HelloWorld_Android/resource/: AndroidManifest.xml
example/01.HelloWorld_Android/resource/res/layout/: activity_main.xml
example/01.HelloWorld_Android/resource/res/values/: strings.xml
example/01.HelloWorld_Android/source/cpp/: ActivityMain.cpp  MainActivity.cpp
example/01.HelloWorld_Android/source/java/pl/grupapracuj/hermes/helloworld/: ActivityMain.java  MainActivity.java
example/01.HelloWorld_Android/src/main/: AndroidManifest.xml
example/01.HelloWorld_Android/src/main/cpp/: ActivityMain.cpp
example/01.HelloWorld_Android/src/main/java/pl/grupapracuj/hermes/helloworld/: ActivityMain.java
example/01.HelloWorld_iOS/: ApplicationMain.mm
example/01.HelloWorld_iOS/HelloWorld.xcodeproj/: project.pbxproj
example/01.HelloWorld_iOS/resources/: Info.plist  LaunchScreen.storyboard
ext/: hmsAAssetReader.cpp  hmsAAssetReader.hpp  hmsGZipReader.cpp  hmsGZipReader.hpp  hmsJNI.cpp  hmsJNI.hpp  hmsModule.cpp  hmsModule.hpp  hmsSerializer.cpp  hmsSerializer.hpp
hermes.xcodeproj/: project.pbxproj
hermes.xcodeproj/xcshareddata/xcschemes/: hermes.xcscheme  hermes_ios.xcscheme  (+7 more)
hermes.xcworkspace/: contents.xcworkspacedata
hmsextgzipreader_ios/: hmsextgzipreader_ios.h  hmsextgzipreader_ios.m
include/: data.hpp  hermes.hpp  hmsData.hpp  hmsLogger.hpp  hmsNetwork.hpp  hmsTask.hpp  hmsTools.hpp  logger.hpp  network.hpp  task.hpp  tools.hpp
lib/macos/: .gitignore
licenses/: aes-license.txt
script/: build_common.py  ios.toolchain.cmake  linux.toolchain.cmake  linux_x86.toolchain.cmake  macos.toolchain.cmake  macos_arm64.toolchain.cmake  macos_x86_64.toolchain.cmake
source/: data.cpp  hermes.cpp  hmsData.cpp  hmsLogger.cpp  hmsNetwork.cpp  hmsTask.cpp  hmsTools.cpp  logger.cpp  network.cpp  task.cpp  tools.cpp
(+19 files in other folders)
